Codemirror editor implemented

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,3 +88,12 @@ code {
 		text-dark-layer-2 bg-gray-200  origin-center scale-0 transition-all duration-100 ease-linear group-hover:scale-100;
 	}
 }
+
+/* CODE EDITOR*/
+.cm-scroller,
+.cm-gutters {
+	background-color: #282828 !important;
+}
+.cm-focused {
+	outline: none !important;
+}
